# bento

./: .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
aur/: PKGBUILD
src/: config.rs  main.rs
src/commands/: clean.rs  export.rs  history.rs  import.rs  info.rs  list.rs  mod.rs  pack.rs  rename.rs  search.rs  stats.rs  unpack.rs
src/shell/: wrapper.rs
src/vault/: archive.rs  github.rs  index.rs  mod.rs  paths.rs
tests/: integration.rs
