[package]
name = "bento"
version = "0.1.0"
edition = "2021"
description = "A local project vault CLI — compress, stash, and restore project folders."
license = "MIT"
repository = "https://github.com/Aboud04/bento"
keywords = ["cli", "archive", "vault", "project-management"]
categories = ["command-line-utilities", "compression"]
default-run = "bento"

[[bin]]
name = "bento"
path = "src/main.rs"

[[bin]]
name = "bt"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"

# Compression algorithms
flate2 = "1.1"          # gzip / deflate / zlib
zstd = "0.13"           # Zstandard (Facebook)
bzip2 = "0.6"           # bzip2
xz2 = "0.1"             # XZ / LZMA2
lz4_flex = "0.13"       # LZ4 (pure Rust, fast)
snap = "1.1"            # Snappy (Google, speed-oriented)
brotli = "8"            # Brotli (Google, web-optimized)
dirs = "6"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }

# CLI polish
colored = "3.1"             # Terminal colors
comfy-table = "7.2"         # Pretty table borders
indicatif = "0.18"          # Progress bars / spinners
clap_complete = "4.6"       # Shell completion scripts
dialoguer = "0.12"          # Interactive prompts (y/n)

[profile.release]
strip = true
lto = true
codegen-units = 1

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
zstd = "0.13"
tar = "0.4"
serial_test = "3.4"
